Fix look of button close icon, fix padding on item modal, improve visibility of item title

--- a/app/assets/stylesheets/ui-customizations.css.scss
+++ b/app/assets/stylesheets/ui-customizations.css.scss
@@ -681,8 +681,10 @@ div.dataTables_filter {
 	height:100%;
 }
 
-.sections-modals .modal-content .modal-body {
-  padding: 0;
+.sections-modals, .items-modals {
+  .modal-content .modal-body {
+    padding: 0;
+  }
 }
 
 #banner {
@@ -703,18 +705,16 @@ div.dataTables_filter {
 	button.close {
 		z-index: 200;
 		position: absolute;
-		top:18px;
-		right:18px;
+		top:10px;
+		right:10px;
 		opacity: .7;
 		border:solid 1px #fff;
-			border-radius:3px;
-		span {
+		border-radius:3px;
+    padding: 5px;
+		i {
 			color:#fff;
-			padding:0 8px;
-			text-shadow: 0 1px 0 #000;
 			font-size:34px;
-
-			line-height:1em;
+      text-shadow: 1px 1px 1px #000;
 		}
 	}
 	button.close:hover {
@@ -746,6 +746,7 @@ div.dataTables_filter {
 
 	h2 {
 		margin-bottom:20px;
+    text-shadow: 1px 1px 1px #000;
 	}
 }
 .items-list, .showcases-list {
